crates/carta/tests/snapshots/golden_writer__docbook__common__link-autolink.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <link xlink:href="http://example.com" role="uri">http://example.com</link>
</para>
