crates/carta/tests/snapshots/golden_writer__docbook__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  before <link xlink:href="http://example.com"></link> after
</para>
