crates/carta/tests/snapshots/golden_writer__docbook__common__link-in-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <link xlink:href="u1">outer <link xlink:href="u2" id="iid" role="ic">inner</link> end</link>
</para>
