crates/carta/tests/snapshots/golden_writer__docbook__common__link-label-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  Padding padding padding padding
  <link xlink:href="http://example.com/path">a multi word link label
  here</link> and trailing words to push wrapping.
</para>
