crates/carta/tests/snapshots/golden_writer__docbook__common__link-title-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <link xlink:href="http://example.com" id="l" role="ext">text</link>
</para>
