crates/carta/tests/snapshots/golden_writer__docbook__common__link-url-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <link xlink:href="http://example.com/a%20b#frag">x</link>
</para>
