crates/carta/tests/snapshots/golden_writer__docbook__common__list-bullet-in-definition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<variablelist spacing="compact">
  <varlistentry>
    <term>
      term
    </term>
    <listitem>
      <itemizedlist spacing="compact">
        <listitem>
          <para>
            alpha
          </para>
        </listitem>
        <listitem>
          <para>
            beta
          </para>
        </listitem>
      </itemizedlist>
    </listitem>
  </varlistentry>
</variablelist>
