crates/carta/tests/snapshots/golden_writer__docbook__common__list-bullet-in-ordered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<orderedlist numeration="arabic" spacing="compact">
  <listitem>
    <para>
      first
    </para>
  </listitem>
  <listitem>
    <para>
      second
    </para>
    <itemizedlist spacing="compact">
      <listitem>
        <para>
          suba
        </para>
      </listitem>
      <listitem>
        <para>
          subb
        </para>
      </listitem>
    </itemizedlist>
  </listitem>
  <listitem>
    <para>
      third
    </para>
  </listitem>
</orderedlist>
