crates/carta/tests/snapshots/golden_writer__docbook__common__literal-control-chars.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  before xy after
</para>
