crates/carta/tests/snapshots/golden_writer__docbook__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <emphasis>emph with <emphasis role="strong">strong</emphasis>
  inside</emphasis> end
</para>
