crates/carta/tests/snapshots/golden_writer__docbook__common__nonascii-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  café résumé naïve
</para>
